[gd_scene load_steps=8 format=3 uid="uid://bty6qga3l0gim"]

[ext_resource type="Script" path="res://Scripts/Managers/DeckBuilderMenuManager.gd" id="1_erhco"]
[ext_resource type="PackedScene" uid="uid://dyxnnhr8of2l6" path="res://Prefabs/UI Prefabs/Add_Card_Button.tscn" id="3_nxo8m"]
[ext_resource type="PackedScene" uid="uid://dtygslkjd7lo6" path="res://Prefabs/UI Prefabs/Remove_Card_Button.tscn" id="8_vufdo"]
[ext_resource type="Script" path="res://Scripts/Managers/Submenu Manager.gd" id="9_n8b1u"]
[ext_resource type="Texture2D" uid="uid://bjoiwibvs61k1" path="res://Sprites/Save Button.png" id="10_3l3rw"]
[ext_resource type="Texture2D" uid="uid://c81sm3ldwwoj1" path="res://Sprites/Load.png" id="11_2gcl7"]
[ext_resource type="Texture2D" uid="uid://b40n4lbsqkhqr" path="res://Sprites/Back-Button.png" id="18_ce4ss"]

[node name="DeckBuilderMenu" type="Node2D"]

[node name="Control" type="Control" parent="." node_paths=PackedStringArray("attack_card_menu", "heal_card_menu", "shield_card_menu", "poison_card_menu", "deck_menu")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_erhco")
attack_card_menu = NodePath("../TabContainer/Attack Cards")
heal_card_menu = NodePath("../TabContainer/Heal Cards")
shield_card_menu = NodePath("../TabContainer/Shield Cards")
poison_card_menu = NodePath("../TabContainer/Poison Cards")
deck_menu = NodePath("ScrollContainer/HBoxContainer")
menu_button_prefab = ExtResource("3_nxo8m")
deck_button_prefab = ExtResource("8_vufdo")

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
layout_mode = 0
offset_left = 58.0
offset_top = 232.0
offset_right = 634.0
offset_bottom = 347.0
scale = Vector2(0.8, 0.8)

[node name="HBoxContainer" type="HBoxContainer" parent="Control/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="."]
offset_right = 475.0
offset_bottom = 208.0
scale = Vector2(0.65, 0.65)
current_tab = 0

[node name="Attack Cards" type="VBoxContainer" parent="TabContainer"]
custom_minimum_size = Vector2(327, 98)
layout_mode = 2
script = ExtResource("9_n8b1u")
max_cards_per_row = 5
metadata/_tab_index = 0

[node name="Heal Cards" type="VBoxContainer" parent="TabContainer"]
visible = false
custom_minimum_size = Vector2(327, 98)
layout_mode = 2
script = ExtResource("9_n8b1u")
max_cards_per_row = 5
metadata/_tab_index = 1

[node name="Shield Cards" type="VBoxContainer" parent="TabContainer"]
visible = false
custom_minimum_size = Vector2(327, 98)
layout_mode = 2
script = ExtResource("9_n8b1u")
max_cards_per_row = 5
metadata/_tab_index = 2

[node name="Poison Cards" type="VBoxContainer" parent="TabContainer"]
visible = false
custom_minimum_size = Vector2(327, 98)
layout_mode = 2
script = ExtResource("9_n8b1u")
max_cards_per_row = 5
metadata/_tab_index = 3

[node name="Save Button" type="TextureButton" parent="."]
offset_left = 479.0
offset_top = 112.0
offset_right = 548.0
offset_bottom = 162.0
texture_normal = ExtResource("10_3l3rw")

[node name="Load Button" type="TextureButton" parent="."]
offset_left = 475.0
offset_top = 164.0
offset_right = 561.0
offset_bottom = 214.0
texture_normal = ExtResource("11_2gcl7")

[node name="Button" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 515.0
offset_top = 4.0
offset_right = 570.0
offset_bottom = 58.0
texture_normal = ExtResource("18_ce4ss")

[connection signal="pressed" from="Save Button" to="Control" method="_on_save_button_pressed"]
[connection signal="pressed" from="Load Button" to="Control" method="_on_load_button_pressed"]
[connection signal="pressed" from="TextureButton" to="Control" method="_on_texture_button_pressed"]
